[gd_scene load_steps=7 format=3 uid="uid://c6h7o3o5bg0in"]

[ext_resource type="Script" path="res://pausemenu.gd" id="1_4nhdx"]
[ext_resource type="TileSet" uid="uid://dw17lisxa37fd" path="res://common/ui/notebook.tres" id="1_kgi5d"]
[ext_resource type="Theme" uid="uid://cij1n14rp7py" path="res://UI/HUDtheme.tres" id="2_3wt6w"]

[sub_resource type="Animation" id="Animation_a2gv4"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TileMap:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-100, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TileMap:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-64, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:modulate:r")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.001)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect:modulate:g")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.001)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ColorRect:modulate:b")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.001)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ColorRect:modulate:a")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.254902, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.001)
}

[sub_resource type="Animation" id="Animation_315qa"]
resource_name = "open"
length = 0.7
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TileMap:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-100, -0.25, 0, 0.25, 0, 16, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.7)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TileMap:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-64, -0.25, 0, 0.25, 0, -64, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.7)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:modulate:r")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.7)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect:modulate:g")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.7)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ColorRect:modulate:b")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.7)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ColorRect:modulate:a")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0.254902, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.7)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6fni1"]
_data = {
"RESET": SubResource("Animation_a2gv4"),
"open": SubResource("Animation_315qa")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_4nhdx")
metadata/_edit_horizontal_guides_ = [324.0]

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.254902)
layout_mode = 0
offset_left = -5.0
offset_top = -167.0
offset_right = 35.0
offset_bottom = -127.0
scale = Vector2(14.7912, 8.54374)
color = Color(0, 0, 0, 1)

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-100, -64)
tile_set = ExtResource("1_kgi5d")
format = 2
layer_0/tile_data = PackedInt32Array(0, 2490368, 1, 1, 2555904, 1, 2, 2555904, 1, 3, 2555904, 1, 4, 2555904, 1, 5, 2621440, 1, 65536, 2490368, 3, 131072, 2490368, 3, 196608, 2490368, 3, 262144, 2490368, 2, 327680, 2490368, 3, 393216, 2490368, 3, 327681, 2555904, 3, 262145, 2555904, 3, 196609, 2555904, 3, 131073, 2555904, 3, 65537, 2555904, 3, 65538, 2555904, 3, 65539, 2555904, 3, 65540, 2555904, 3, 65541, 2621440, 2, 131077, 2621440, 3, 196613, 2621440, 3, 262149, 2621440, 3, 327685, 2621440, 3, 327684, 2555904, 3, 327683, 2555904, 3, 327682, 2555904, 3, 262146, 2555904, 3, 262147, 2555904, 3, 262148, 2555904, 3, 196612, 2555904, 3, 196611, 2555904, 3, 131075, 2555904, 3, 131074, 2555904, 3, 196610, 2555904, 3, 131076, 2555904, 3, 393221, 2621440, 3, 393220, 2555904, 3, 393219, 2555904, 3, 393218, 2555904, 3, 393217, 2555904, 3, 458752, 2490368, 4, 458753, 2555904, 4, 458754, 2555904, 4, 458755, 2555904, 4, 458756, 2555904, 4, 458757, 2621440, 4)

[node name="VBoxContainer" type="VBoxContainer" parent="TileMap"]
offset_left = 16.0
offset_top = 19.0
offset_right = 78.0
offset_bottom = 115.0

[node name="Resume" type="Button" parent="TileMap/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_3wt6w")
text = "Resume"

[node name="Button" type="Button" parent="TileMap/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_3wt6w")
text = "Settings"

[node name="Main Menu" type="Button" parent="TileMap/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_3wt6w")
text = "Main Menu"

[node name="Quit" type="Button" parent="TileMap/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_3wt6w")
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6fni1")
}

[connection signal="pressed" from="TileMap/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="TileMap/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="TileMap/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
